--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -24,7 +24,7 @@
     </div>
     <div>
       <label class="mt-2" for="image">{{'Image' | translate}}</label>
-      <input type="file" id="image" formControlName="image" class="form-control">
+      <input type="file" id="image" class="form-control" (change)="onFileSelected($event)">
     </div>
     <div>
       <label class="mt-2" for="gender">{{'Gender' | translate}}</label>
@@ -35,7 +35,7 @@
         <option value="other">{{'Other' | translate}}</option>
       </select>
       <div *ngIf="signupForm.get('gender')?.invalid && (signupForm.get('gender')?.dirty || signupForm.get('gender')?.touched)" class="alert alert-danger mt-2">
-        <div *ngIf="signupForm.get('gender')?.errors?.['required']">{{'Email' | translate}}Gender is required</div>
+        <div *ngIf="signupForm.get('gender')?.errors?.['required']">{{'Genderisrequired' | translate}}</div>
       </div>
     </div>
     <button class="btn btn-success mt-3" type="submit" [disabled]="signupForm.invalid">{{'Sign Up' | translate}}</button>
