--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark py-5  w-100" style="position: absolute; bottom: 0;">
+<footer class="bg-dark py-5  w-100" style="position: relative; top: 720px;">
             <!-- border-start -->
            
                 <div>
