--- a/src/app/auth/components/signin/signin.component.html
+++ b/src/app/auth/components/signin/signin.component.html
@@ -1,10 +1,10 @@
 <form (ngSubmit)="submitForm()" [formGroup]="loginForm" class="w-50 mx-auto">
    
     <label for="email" class="mt-2">{{'Email' | translate}}</label>
-    <input id="email" formControlName="email" class="form-control" type="text">
-    <div  *ngIf="loginForm.get('email')?.errors != null  && loginForm.get('email')?.touched" class="alert alert-danger mt-2">
-        <p  *ngIf="loginForm.get('email')?.errors?.['required']" class="m-0">{{'Emailisrequired' | translate}}</p>
-        <p  *ngIf="loginForm.get('email')?.errors?.['pattern']" class="m-0">{{'EnterEmailForm' | translate}}</p>
+    <input id="email" formControlName="credential" class="form-control" type="text">
+    <div  *ngIf="loginForm.get('credential')?.errors != null  && loginForm.get('credential')?.touched" class="alert alert-danger mt-2">
+        <p  *ngIf="loginForm.get('credential')?.errors?.['required']" class="m-0">{{'Emailisrequired' | translate}}</p>
+        <p  *ngIf="loginForm.get('credential')?.errors?.['pattern']" class="m-0">{{'EnterEmailForm' | translate}}</p>
     </div>
     
     <label for="password" class="mt-2">{{'Password' | translate}}</label>
