--- a/src/app/components/home/gitstarted/gitstarted.component.html
+++ b/src/app/components/home/gitstarted/gitstarted.component.html
@@ -1,7 +1,7 @@
 <section id="hero" class="d-flex align-items-center">
     <div class="container">
-      <h1>Welcome to Medilab</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <h1>{{'Welcome to Medilab' | translate}}</h1>
+      <h2> {{"We looking forward to serve you and your family's healthcare needs" | translate}}</h2>
+      <a href="#about" class="btn-get-started scrollto"> {{'Get Started' | translate}}</a>
     </div>
   </section>
