--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,11 +12,17 @@
           <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/auth/signup">auth</a>
           </li> -->
-          <li class="nav-item">
+          <li *ngIf="type == 'null'" class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/auth/signin">{{'Sign In' | translate}}</a>
           </li>
-          <li class="nav-item">
+          <li *ngIf="type == 'null'" class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/auth/signup">{{'Sign Up' | translate}}</a>
+          </li>
+          <li *ngIf="type == 'doctor'" class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="/auth/signup">doctor home</a>
+          </li>
+          <li *ngIf="type == 'patient'" class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="/auth/signup">patient home</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" routerLink="/doctor">doctor</a>
@@ -28,8 +34,7 @@
        
         </ul>
         <div class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button *ngIf="type == 'doctor' || type == 'patient'" class="btn btn-outline-success" (click)="logout()" >Logout</button>
         </div>
       </div>
     </div>
