--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -1,113 +1,121 @@
-<form [formGroup]="signupForm" (ngSubmit)="submitForm()" class="w-50 mx-auto" enctype="multipart/form-data">
-    <div>
-      <label class="mt-2" for="email">{{'Email' | translate}}</label>
-      <input type="email" id="email" formControlName="email" class="form-control">
-      <div *ngIf="signupForm.get('email')?.invalid && (signupForm.get('email')?.['dirty'] || signupForm.get('email')?.['touched'])"  class="alert alert-danger mt-2">
-        <div *ngIf="signupForm.get('email')?.errors?.['required']">{{'Emailisrequired' | translate}}</div>
-        <div *ngIf="signupForm.get('email')?.errors?.['email']">{{'EnterEmailForm' | translate}}</div>
-      </div>
-    </div>
-    <div>
-
-
-
+<div class="section-bg-light ">
+  <form [formGroup]="signupForm" (ngSubmit)="submitForm()" class="w-50 mx-auto py-5" enctype="multipart/form-data">
+    <h2 class="text-center">{{'Sign Up' | translate}}</h2>
+  
       <div>
-        <label class="mt-2" for="name">{{'name' | translate}}</label>
-        <input type="name" id="name" formControlName="name" class="form-control">
-        <div *ngIf="signupForm.get('name')?.invalid && (signupForm.get('name')?.['dirty'] || signupForm.get('name')?.['touched'])"  class="alert alert-danger mt-2">
-          <div *ngIf="signupForm.get('name')?.errors?.['required']">{{'nameisrequired' | translate}}</div>
+        <label class="my-2" for="email">{{'Email' | translate}}</label>
+        <input type="email" id="email" formControlName="email" class="form-control">
+        <div *ngIf="signupForm.get('email')?.invalid && (signupForm.get('email')?.['dirty'] || signupForm.get('email')?.['touched'])"  class="alert alert-danger mt-2">
+          <div *ngIf="signupForm.get('email')?.errors?.['required']">{{'Emailisrequired' | translate}}</div>
+          <div *ngIf="signupForm.get('email')?.errors?.['email']">{{'EnterEmailForm' | translate}}</div>
         </div>
       </div>
-
-
       <div>
-        <label class="mt-2" for="mobilePhone">{{'mobilePhone' | translate}}</label>
-        <input type="mobilePhone" id="mobilePhone" formControlName="mobilePhone" class="form-control">
-        <div *ngIf="signupForm.get('mobilePhone')?.invalid && (signupForm.get('mobilePhone')?.['dirty'] || signupForm.get('mobilePhone')?.['touched'])"  class="alert alert-danger mt-2">
-          <div *ngIf="signupForm.get('mobilePhone')?.errors?.['required']">{{'mobilePhoneisrequired' | translate}}</div>
+  
+  
+  
+        <div>
+          <label class="my-2" for="name">{{'name' | translate}}</label>
+          <input type="name" id="name" formControlName="name" class="form-control">
+          <div *ngIf="signupForm.get('name')?.invalid && (signupForm.get('name')?.['dirty'] || signupForm.get('name')?.['touched'])"  class="alert alert-danger mt-2">
+            <div *ngIf="signupForm.get('name')?.errors?.['required']">{{'nameisrequired' | translate}}</div>
+          </div>
+        </div>
+  
+  
+        <div>
+          <label class="my-2" for="mobilePhone">{{'mobilePhone' | translate}}</label>
+          <input type="mobilePhone" id="mobilePhone" formControlName="mobilePhone" class="form-control">
+          <div *ngIf="signupForm.get('mobilePhone')?.invalid && (signupForm.get('mobilePhone')?.['dirty'] || signupForm.get('mobilePhone')?.['touched'])"  class="alert alert-danger mt-2">
+            <div *ngIf="signupForm.get('mobilePhone')?.errors?.['required']">{{'mobilePhoneisrequired' | translate}}</div>
+          </div>
+        </div>
+  
+       
+  
+        <div>
+          <label class="my-2" for="type">{{'type' | translate}}</label>
+          <select id="type" formControlName="type" class="form-control" >
+            <option value="">{{'Selecttype' | translate}}</option>
+            <option value="patient">{{'Patient' | translate}}</option>
+            <option value="doctor">{{'Doctor' | translate}}</option>
+          </select>
+          <div *ngIf="signupForm.get('type')?.invalid && (signupForm.get('type')?.dirty || signupForm.get('type')?.touched)" class="alert alert-danger mt-2">
+            <div *ngIf="signupForm.get('type')?.errors?.['required']">{{'typeisrequired' | translate}}</div>
+          </div>
+        </div>
+  
+  
+  
+  
+  
+  
+        <label class="my-2" for="username">{{'Username' | translate}}</label>
+        <input type="text" id="username" formControlName="username" class="form-control">
+        <div *ngIf="signupForm.get('username')?.invalid && (signupForm.get('username')?.dirty || signupForm.get('username')?.touched)" class="alert alert-danger mt-2" >
+          <div *ngIf="signupForm.get('username')?.errors?.['required']">{{'Usernameisrequired' | translate}}</div>
         </div>
       </div>
-
-     
-
       <div>
-        <label class="mt-2" for="type">{{'type' | translate}}</label>
-        <select id="type" formControlName="type" class="form-control" >
-          <option value="">{{'Selecttype' | translate}}</option>
-          <option value="patient">{{'Patient' | translate}}</option>
-          <option value="doctor">{{'Doctor' | translate}}</option>
+        <label class="my-2" for="password">{{'Password' | translate}}</label>
+        <input type="password" id="password" formControlName="password" class="form-control">
+        <div *ngIf="signupForm.get('password')?.invalid && (signupForm.get('password')?.dirty || signupForm.get('password')?.touched)" class="alert alert-danger mt-2">
+          <div *ngIf="signupForm.get('password')?.errors?.['required']">{{'Passwordisrequired' | translate}}</div>
+          <div *ngIf="signupForm.get('password')?.errors?.['minlength']">{{'Passwordmustbemorethan8chars' | translate}}</div>
+        </div>
+      </div>
+      <div>
+        <label class="my-2" for="image">{{'Image' | translate}}</label>
+        <input type="file" id="image" class="form-control" (change)="onFileSelected($event)">
+        
+      </div>
+      <div>
+        <label class="my-2" for="gender">{{'Gender' | translate}}</label>
+        <select id="gender" formControlName="gender" class="form-control" >
+          <option value="">{{'Selectgender' | translate}}</option>
+          <option value="male">{{'Male' | translate}}</option>
+          <option value="female">{{'Female' | translate}}</option>
+          <option value="other">{{'Other' | translate}}</option>
         </select>
-        <div *ngIf="signupForm.get('type')?.invalid && (signupForm.get('type')?.dirty || signupForm.get('type')?.touched)" class="alert alert-danger mt-2">
-          <div *ngIf="signupForm.get('type')?.errors?.['required']">{{'typeisrequired' | translate}}</div>
+  
+        <div *ngIf="signupForm.controls['type'].value == 'doctor'">
+          <label class="my-2" for="clinicAddress">{{'clinicAddress' | translate}}</label>
+          <input type="clinicAddress" id="clinicAddress" formControlName="clinicAddress" class="form-control">
+          <div *ngIf="signupForm.get('clinicAddress')?.invalid && (signupForm.get('clinicAddress')?.dirty || signupForm.get('clinicAddress')?.touched)" class="alert alert-danger mt-2">
+            <div *ngIf="signupForm.get('clinicAddress')?.errors?.['required']">{{'clinicAddressisrequired' | translate}}</div>
+          </div>
+        </div>
+  
+         <div *ngIf="signupForm.controls['type'].value == 'doctor'">
+          <label class="my-2" for="specification">{{'specification' | translate}}</label>
+          <input type="specification" id="specification" formControlName="specification" class="form-control">
+          <div *ngIf="signupForm.get('specification')?.invalid && (signupForm.get('specification')?.dirty || signupForm.get('specification')?.touched)" class="alert alert-danger mt-2">
+            <div *ngIf="signupForm.get('specification')?.errors?.['required']">{{'specificationisrequired' | translate}}</div>
+          </div>
+        </div>
+  
+  
+        <div *ngIf="signupForm.controls['type'].value == 'doctor'">
+          <label class="my-2" for="role">{{'role' | translate}}</label>
+          <select id="role" formControlName="role" class="form-control" >
+            <option value="">{{'Selectrole' | translate}}</option>
+            <option value="human">{{'Human' | translate}}</option>
+            <option value="veterinary">{{'Veterinary' | translate}}</option>
+          </select>
+          <div *ngIf="signupForm.get('role')?.invalid && (signupForm.get('role')?.dirty || signupForm.get('role')?.touched)" class="alert alert-danger mt-2">
+            <div *ngIf="signupForm.get('role')?.errors?.['required']">{{'roleisrequired' | translate}}</div>
+          </div>
+        </div>
+        <div *ngIf="signupForm.get('gender')?.invalid && (signupForm.get('gender')?.dirty || signupForm.get('gender')?.touched)" class="alert alert-danger mt-2">
+          <div *ngIf="signupForm.get('gender')?.errors?.['required']">{{'Genderisrequired' | translate}}</div>
         </div>
       </div>
+      <div class="text-center">
+        <button class="btnCustomeStyle btn-success mt-5" type="submit"  [disabled]="signupForm.invalid" >{{'Sign Up' | translate}}</button>
 
-
-
-
-
-
-      <label class="mt-2" for="username">{{'Username' | translate}}</label>
-      <input type="text" id="username" formControlName="username" class="form-control">
-      <div *ngIf="signupForm.get('username')?.invalid && (signupForm.get('username')?.dirty || signupForm.get('username')?.touched)" class="alert alert-danger mt-2" >
-        <div *ngIf="signupForm.get('username')?.errors?.['required']">{{'Usernameisrequired' | translate}}</div>
       </div>
-    </div>
-    <div>
-      <label class="mt-2" for="password">{{'Password' | translate}}</label>
-      <input type="password" id="password" formControlName="password" class="form-control">
-      <div *ngIf="signupForm.get('password')?.invalid && (signupForm.get('password')?.dirty || signupForm.get('password')?.touched)" class="alert alert-danger mt-2">
-        <div *ngIf="signupForm.get('password')?.errors?.['required']">{{'Passwordisrequired' | translate}}</div>
-        <div *ngIf="signupForm.get('password')?.errors?.['minlength']">{{'Passwordmustbemorethan8chars' | translate}}</div>
-      </div>
-    </div>
-    <div>
-      <label class="mt-2" for="image">{{'Image' | translate}}</label>
-      <input type="file" id="image" class="form-control" (change)="onFileSelected($event)">
-      
-    </div>
-    <div>
-      <label class="mt-2" for="gender">{{'Gender' | translate}}</label>
-      <select id="gender" formControlName="gender" class="form-control" >
-        <option value="">{{'Selectgender' | translate}}</option>
-        <option value="male">{{'Male' | translate}}</option>
-        <option value="female">{{'Female' | translate}}</option>
-        <option value="other">{{'Other' | translate}}</option>
-      </select>
-
-      <div *ngIf="signupForm.controls['type'].value == 'doctor'">
-        <label class="mt-2" for="clinicAddress">{{'clinicAddress' | translate}}</label>
-        <input type="clinicAddress" id="clinicAddress" formControlName="clinicAddress" class="form-control">
-        <div *ngIf="signupForm.get('clinicAddress')?.invalid && (signupForm.get('clinicAddress')?.dirty || signupForm.get('clinicAddress')?.touched)" class="alert alert-danger mt-2">
-          <div *ngIf="signupForm.get('clinicAddress')?.errors?.['required']">{{'clinicAddressisrequired' | translate}}</div>
-        </div>
-      </div>
-
-       <div *ngIf="signupForm.controls['type'].value == 'doctor'">
-        <label class="mt-2" for="specification">{{'specification' | translate}}</label>
-        <input type="specification" id="specification" formControlName="specification" class="form-control">
-        <div *ngIf="signupForm.get('specification')?.invalid && (signupForm.get('specification')?.dirty || signupForm.get('specification')?.touched)" class="alert alert-danger mt-2">
-          <div *ngIf="signupForm.get('specification')?.errors?.['required']">{{'specificationisrequired' | translate}}</div>
-        </div>
-      </div>
+    </form>
+</div>
 
 
-      <div *ngIf="signupForm.controls['type'].value == 'doctor'">
-        <label class="mt-2" for="role">{{'role' | translate}}</label>
-        <select id="role" formControlName="role" class="form-control" >
-          <option value="">{{'Selectrole' | translate}}</option>
-          <option value="human">{{'Human' | translate}}</option>
-          <option value="veterinary">{{'Veterinary' | translate}}</option>
-        </select>
-        <div *ngIf="signupForm.get('role')?.invalid && (signupForm.get('role')?.dirty || signupForm.get('role')?.touched)" class="alert alert-danger mt-2">
-          <div *ngIf="signupForm.get('role')?.errors?.['required']">{{'roleisrequired' | translate}}</div>
-        </div>
-      </div>
-      <div *ngIf="signupForm.get('gender')?.invalid && (signupForm.get('gender')?.dirty || signupForm.get('gender')?.touched)" class="alert alert-danger mt-2">
-        <div *ngIf="signupForm.get('gender')?.errors?.['required']">{{'Genderisrequired' | translate}}</div>
-      </div>
-    </div>
-    <button class="btn btn-success mt-3" type="submit"  >{{'Sign Up' | translate}}</button>
-  </form>
-
-  <!-- [disabled]="signupForm.invalid" -->
+  <!-- -->
