--- a/src/app/components/gitstarted/gitstarted.component.css
+++ b/src/app/components/gitstarted/gitstarted.component.css
@@ -1,7 +1,7 @@
 #hero {
     width: 100%;
     height: 90vh;
-    background: url("../../../../assets/img/hero-bg.jpg") top center;
+    background: url("../../../assets/img/hero-bg.jpg") top center;
     background-size: cover;
     margin-bottom: -200px;
   }
