--- a/src/app/components/whyus/whyus.component.html
+++ b/src/app/components/whyus/whyus.component.html
@@ -4,38 +4,36 @@
       <div class="row">
         <div class="col-lg-4 d-flex align-items-stretch">
           <div class="content">
-            <h3>Why Choose Medilab?</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-              Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+            <h3>{{'Why Choose Medilab?' | translate}}</h3>
+            <p>{{'we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.' | translate}}
             </p>
             <div class="text-center">
-              <a href="#" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
+              <a href="#" class="more-btn"> {{'Learn More' | translate}} <i class="bi bi-chevron-right"></i></a>
             </div>
           </div>
         </div>
         <div class="col-lg-8 d-flex align-items-stretch">
-          <div class="icon-boxes d-flex flex-column justify-content-center">
+          <div class="icon-boxes  d-flex flex-column justify-content-center">
             <div class="row">
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-receipt"></i>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <i class="bi bi-newspaper"></i>
+                  <h4> {{'Simplify Your Healthcare Experience' | translate}} </h4>
+                  <p>{{'Book Appointments, order prescriptions, and access your medical records anytime, anywhere.' | translate}}</p>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-cube-alt"></i>
-                  <h4>Ullamco laboris ladore pan</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <i class="bi bi-box"></i>
+                  <h4>{{'We use the latest technology' | translate}}</h4>
+                  <p>{{'We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.' | translate}}</p>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
-                  <i class="bx bx-images"></i>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <i class="bi bi-images"></i>
+                  <h4>{{'Perfect Quality' | translate}}</h4>
+                  <p>{{'We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.' | translate}} </p>
                 </div>
               </div>
             </div>
