--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -2,40 +2,40 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Services</h2>
-            <p>we have a wide scope of high-quality medical care services.</p>
+            <h2>{{"Services" | translate}}</h2>
+            <p>{{"subService" | translate}}</p>
         </div>
 
         <div class="row">
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                 <div class="icon-box">
                     <div class="icon"><i class="fas fa-heartbeat"></i></div>
-                    <h4><a href="">Cardiology</a></h4>
-                    <p>Our cardiologists treat all kinds of heart and blood vessel diseases</p>
+                    <h4><a href="">{{"Cardiology" | translate}}</a></h4>
+                    <p>{{"subCardiology" | translate}}</p>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
                 <div class="icon-box">
                     <div class="icon"><i class="fa-solid fa-tooth"></i></div>
-                    <h4><a href="">Dentistry</a></h4>
-                    <p>Our dental clinics are specialized in Dental surgeries, Endodontics, Prosthetic ,Orthodontics</p>
+                    <h4><a href="">{{"Dentistry" | translate}}</a></h4>
+                    <p>{{"subDentistry" |translate}}</p>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                 <div class="icon-box">
                     <div class="icon"><i class="fa-solid fa-eye"></i></div>
-                    <h4><a href="">Ophthalmology </a></h4>
-                    <p>We provide clinics with latest technologies and subspecialties like: Retinal examination & Pediatric ophthalmology</p>
+                    <h4><a href="">{{"Ophthalmology" | translate}} </a></h4>
+                    <p>{{"subOphthalmology" |translate}}</p>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                 <div class="icon-box">
                     <div class="icon"><i class="fas fa-brain"></i></div>
-                    <h4><a href="">Neurology</a></h4>
-                    <p>We are ready to deal with all critical neurological presentations.</p>
+                    <h4><a href="">{{"Neurology" | translate}}</a></h4>
+                    <p>{{"subNeurology" | translate}}</p>
                 </div>
             </div>
 
@@ -43,16 +43,16 @@
                 <div class="icon-box">
                     <div class="icon"><i class="fa-solid fa-hand-dots"></i>
                     </div>
-                    <h4><a href="">Dermatology</a></h4>
-                    <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                    <h4><a href="">{{"Dermatology" | translate}}</a></h4>
+                    <p>{{"subDermatology" | translate}}</p>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                 <div class="icon-box">
                     <div class="icon"><i class="fas fa-children"></i></div>
-                    <h4><a href="">Pediatrics</a></h4>
-                    <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+                    <h4><a href="">{{"Pediatrics" | translate}}</a></h4>
+                    <p>{{"subPediatrics" | translate}}</p>
                 </div>
             </div>
 
