--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -50,12 +50,12 @@
     </div>
 </div> -->
 
-<header id="header">
+<header id="header" class=" sticky-top">
     <div class="container d-flex align-items-center">
         
         
-        <a routerLink="/" class="logo me-auto"><h1>Medilab</h1></a>
-        <nav id="navbar" class="navbar order-last order-lg-0">
+        <a routerLink="/" class="logo me-auto navbar-brand " style="color: #1977cc;">Medilab</a>
+        <nav id="navbar" class="navbar order-last order-lg-0 ">
             <ul>
 
                 <li class="nav-item">
