--- a/src/app/components/appointment/appointment.component.scss
+++ b/src/app/components/appointment/appointment.component.scss
@@ -96,10 +96,10 @@ input.ng-invalid.ng-touched ,select.ng-invalid.ng-touched
 {
   border:1px solid red;
 }
-input.ng-valid ,select.ng-valid
-{
-  border:1px solid green;
-}
+// input.ng-valid ,select.ng-valid
+// {
+//   border:1px solid green;
+// }
 section {
     padding: 60px 0;
     overflow: hidden;
