adding contact us section

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,7 +77,9 @@ section {
 .section-bg-light {
     background-color: #f1f7fd;
 }
-
+a{
+    text-decoration: none;
+}
 body {
     font-family: "Open Sans", sans-serif;
     //color: #444444;
