--- a/src/app/components/appointment/appointment.component.scss
+++ b/src/app/components/appointment/appointment.component.scss
@@ -1,48 +1,55 @@
+.appointment {
+    border: 2px solid #1977cc;
+    margin: 20px 30px;
+    border-radius: 22px;
+    box-shadow: rgba(4, 59, 92, 1) 0px 0px 22px 0px;
+}
+
 .appointment .php-email-form {
     width: 100%;
-  }
-  
-  .appointment .php-email-form .form-group {
+}
+
+.appointment .php-email-form .form-group {
     padding-bottom: 8px;
-  }
-  
-  .appointment .php-email-form .validate {
+}
+
+.appointment .php-email-form .validate {
     color: red;
     margin: 0 0 15px 0;
     font-weight: 400;
     font-size: 13px;
-  }
-  
-  .appointment .php-email-form .error-message {
+}
+
+.appointment .php-email-form .error-message {
     display: none;
     color: #fff;
     background: #ed3c0d;
     text-align: left;
     padding: 15px;
     font-weight: 600;
-  }
-  
-  .appointment .php-email-form .error-message br+br {
+}
+
+.appointment .php-email-form .error-message br+br {
     margin-top: 25px;
-  }
-  
-  .appointment .php-email-form .sent-message {
+}
+
+.appointment .php-email-form .sent-message {
     display: none;
     color: #fff;
     background: #18d26e;
     text-align: center;
     padding: 15px;
     font-weight: 600;
-  }
-  
-  .appointment .php-email-form .loading {
+}
+
+.appointment .php-email-form .loading {
     display: none;
     background: #fff;
     text-align: center;
     padding: 15px;
-  }
-  
-  .appointment .php-email-form .loading:before {
+}
+
+.appointment .php-email-form .loading:before {
     content: "";
     display: inline-block;
     border-radius: 50%;
@@ -52,50 +59,51 @@
     border: 3px solid #18d26e;
     border-top-color: #eee;
     animation: animate-loading 1s linear infinite;
-  }
-  
-  .appointment .php-email-form input,
-  .appointment .php-email-form textarea,
-  .appointment .php-email-form select {
+}
+
+.appointment .php-email-form input,
+.appointment .php-email-form textarea,
+.appointment .php-email-form select {
     border-radius: 0;
     box-shadow: none;
     font-size: 14px;
     padding: 10px !important;
-  }
-  
-  .appointment .php-email-form input:focus,
-  .appointment .php-email-form textarea:focus,
-  .appointment .php-email-form select:focus {
+}
+
+.appointment .php-email-form input:focus,
+.appointment .php-email-form textarea:focus,
+.appointment .php-email-form select:focus {
     border-color: #1977cc;
-  }
-  
-  .appointment .php-email-form input,
-  .appointment .php-email-form select {
+}
+
+.appointment .php-email-form input,
+.appointment .php-email-form select {
     height: 44px;
-  }
-  
-  .appointment .php-email-form textarea {
+}
+
+.appointment .php-email-form textarea {
     padding: 10px 12px;
-  }
-  
-  .appointment .php-email-form button[type=submit] {
+}
+
+.appointment .php-email-form button[type=submit] {
     background: #1977cc;
     border: 0;
     padding: 10px 35px;
     color: #fff;
     transition: 0.4s;
     border-radius: 50px;
-  }
-  
-  .appointment .php-email-form button[type=submit]:hover {
+}
+
+.appointment .php-email-form button[type=submit]:hover {
     background: #1c84e3;
-  }
+}
 
 //   section general
-input.ng-invalid.ng-touched ,select.ng-invalid.ng-touched
-{
-  border:1px solid red;
+input.ng-invalid.ng-touched,
+select.ng-invalid.ng-touched {
+    border: 1px solid red;
 }
+
 // input.ng-valid ,select.ng-valid
 // {
 //   border:1px solid green;
@@ -103,27 +111,27 @@ input.ng-invalid.ng-touched ,select.ng-invalid.ng-touched
 section {
     padding: 60px 0;
     overflow: hidden;
-  }
-  
-  .section-bg {
+}
+
+.section-bg {
     background-color: #f1f7fd;
-  }
-  
-  .section-title {
+}
+
+.section-title {
     text-align: center;
     padding-bottom: 30px;
-  }
-  
-  .section-title h2 {
+}
+
+.section-title h2 {
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 20px;
     padding-bottom: 20px;
     position: relative;
     color: #2c4964;
-  }
-  
-  .section-title h2::before {
+}
+
+.section-title h2::before {
     content: "";
     position: absolute;
     display: block;
@@ -132,9 +140,9 @@ section {
     background: #ddd;
     bottom: 1px;
     left: calc(50% - 60px);
-  }
-  
-  .section-title h2::after {
+}
+
+.section-title h2::after {
     content: "";
     position: absolute;
     display: block;
@@ -143,9 +151,8 @@ section {
     background: #1977cc;
     bottom: 0;
     left: calc(50% - 20px);
-  }
-  
-  .section-title p {
+}
+
+.section-title p {
     margin-bottom: 0;
-  }
-  
+}
