--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -1,3 +1,4 @@
+<!-- <app-appointment></app-appointment> -->
 <div class="row">
     <div class="card" style="width: 18rem;" *ngFor="let doc of Doctorsinformations">
         <img src="..." class="card-img-top" alt="...">
