--- a/src/app/components/selecteddoctors/selecteddoctors.component.html
+++ b/src/app/components/selecteddoctors/selecteddoctors.component.html
@@ -15,11 +15,16 @@
                 <span>Doctor specialized in {{doc.specification}}</span>
                 <p>Rating section</p>
                 <p class="bi bi-geo-alt">{{doc.clinicAddress}}</p>
-                <p class="bi bi-telephone">{{doc.mobilePhone}}</p>
+                
+                <div >
+                    <p class="bi bi-telephone">{{doc.mobilePhone}}</p>
+                    <button class="btn booknowbtn mt-2" >Available times</button>
+                </div>
                 
             </div>
         </div>
-            <button class="btn booknowbtn mt-2">Available times</button>
+      
+            
         </div>
         
     
