edit time slots

--- a/src/app/components/selecteddoctors/selecteddoctors.component.html
+++ b/src/app/components/selecteddoctors/selecteddoctors.component.html
@@ -18,7 +18,7 @@
                 
                 <div >
                     <p class="bi bi-telephone">{{doc.mobilePhone}}</p>
-                    <button class="btn booknowbtn mt-2" >Available times</button>
+                    <button class="btn booknowbtn mt-2" (click)="showTimeSlots(doc.doctorId)" >Available times</button>
                 </div>
                 
             </div>
