--- a/src/app/components/selecteddoctors/selecteddoctors.component.html
+++ b/src/app/components/selecteddoctors/selecteddoctors.component.html
@@ -7,7 +7,7 @@
 </div>
 <div class="row my-4   justify-content-center" *ngFor="let doc of Doctorsinformations">
 
-        <div class="member bookingcard" >
+        <div class="member card col-md-8" >
             <div class=" d-flex align-items-start " >
             <div class="pic"><img src="assets/img/doctors/doctors-1.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
@@ -26,8 +26,5 @@
       
             
         </div>
-        
-    
-
 </div>
 </section>
