--- a/src/app/components/availabletimes/availabletimes.component.html
+++ b/src/app/components/availabletimes/availabletimes.component.html
@@ -4,7 +4,7 @@
 
 <div class="row my-4   justify-content-center" *ngFor="let doc of DoctorsTimeSlots">
 
-        <div class="member bookingcard" >
+        <div class="member card col-md-8" >
             <div class=" d-flex align-items-start justify-content-between" >
             <div class="member-info" *ngIf="!doc.fullyBooked">
                 <h4>{{doc.date}}</h4>
@@ -15,7 +15,7 @@
             <div *ngIf="doc.fullyBooked">
                 <h4 style="color: rgba(1, 1, 1, 0.57);">No Available Appointment</h4>
             </div>
-            <button class="btn btn-danger" [disabled]="doc.fullyBooked">Book</button>
+            <button class="btn btn-danger" [disabled]="doc.fullyBooked" (click)="book(doc._id)">Book</button>
         </div>
       
             
