grapgh and loading

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -129,6 +129,14 @@
             >{{ "Dashboard" | translate }}</a
           >
         </li>
+        <li *ngIf="type == 'patient'" class="nav">
+          <a
+            class="nav-link"
+            routerLinkActive="active"
+            routerLink="/patient/dashboard"
+            >{{ "Dashboard" | translate }}</a
+          >
+        </li>
         <li *ngIf="type == 'doctor'" class="nav-item">
           <a
             class="nav-link"
